fix for dashboard reviews search and filter controls on mobile

--- a/ent-talent-mgmt/src/main/webapp/assets/styles/main.css
+++ b/ent-talent-mgmt/src/main/webapp/assets/styles/main.css
@@ -33,3 +33,20 @@ Browser Upgrade Prompt
   color: white;
   background-color: red;
 }
+
+/* ==========================================================================
+Main Content container
+========================================================================== */
+.etm-content{
+  height: calc(100vh - 64px);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+ @media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .etm-content{
+      height: auto;
+    }
+  }
